[package]
name = "sce-helper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"]}
anyhow = "1.0.57"
indicatif = "0.16.2"
ansi_term = "0.12.1"
scraper = "0.13.0"
lazy_static = "1.4.0"